Co-pilot fixes
Signed-off-by: Paul Smedley <paul@smedley.id.au>